syntax = "proto3";

package cflb4k8s;

service ConfigRemote {
  rpc Status(StatusQuery) returns (StatusResponse) {}
  
  rpc PushRule(Rule) returns (RuleAck) {}
  
  rpc DropRule(RuleDrop) returns (RuleAck) {}
}

message Rule {
  string name = 1;
  string host = 2;
  int32 port = 3;
  repeated string targets = 4;
  string protocol = 5;
}

message RuleAck {
    bool accepted = 1;
}

message RuleDrop {
    string host = 1;
}

message StatusQuery {
    // none
}

message StatusResponse {
    bool initialised = 1;
}
